# headline-agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-linter.yml
app/: main.py  paths.py
app/api/v1/: router.py
app/api/v1/endpoints/: headline.py  scrape.py  web_scraper.py
app/configs/: config.yaml  web_scraper.yaml
app/helpers/: api.py  async_process.py
app/schemas/: headline.py  web_scraper.py
